[gd_scene load_steps=50 format=2]

[ext_resource path="res://NPC2.gd" type="Script" id=1]
[ext_resource path="res://Assets/Player/Male_Spritesheet.png" type="Texture" id=2]
[ext_resource path="res://New/toUse/question.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=55]
extents = Vector2( 8, 8 )

[sub_resource type="AnimationNodeAnimation" id=56]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=57]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=58]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=59]
animation = "IdleUp"

[sub_resource type="AnimationNodeAnimation" id=60]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=61]
animation = "IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=17]
blend_point_0/node = SubResource( 56 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 57 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 58 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 59 )
blend_point_3/pos = Vector2( 0, -1 )
blend_point_4/node = SubResource( 60 )
blend_point_4/pos = Vector2( 0, 1 )
blend_point_5/node = SubResource( 61 )
blend_point_5/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=62]
animation = "TurnLeft"

[sub_resource type="AnimationNodeAnimation" id=63]
animation = "TurnRight"

[sub_resource type="AnimationNodeAnimation" id=64]
animation = "TurnDown"

[sub_resource type="AnimationNodeAnimation" id=65]
animation = "TurnUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=50]
blend_point_0/node = SubResource( 62 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 63 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 64 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 65 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=66]
animation = "WalkLeft"

[sub_resource type="AnimationNodeAnimation" id=67]
animation = "WalkRight"

[sub_resource type="AnimationNodeAnimation" id=68]
animation = "WalkDown"

[sub_resource type="AnimationNodeAnimation" id=69]
animation = "WalkUp"

[sub_resource type="AnimationNodeAnimation" id=70]
animation = "WalkUp"

[sub_resource type="AnimationNodeAnimation" id=71]
animation = "WalkDown"

[sub_resource type="AnimationNodeAnimation" id=72]
animation = "WalkLeft"

[sub_resource type="AnimationNodeAnimation" id=73]
animation = "WalkRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=22]
blend_point_0/node = SubResource( 66 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 67 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 68 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 69 )
blend_point_3/pos = Vector2( 0, -1 )
blend_point_4/node = SubResource( 70 )
blend_point_4/pos = Vector2( 0, 1 )
blend_point_5/node = SubResource( 71 )
blend_point_5/pos = Vector2( 0, -1 )
blend_point_6/node = SubResource( 72 )
blend_point_6/pos = Vector2( -1, 0 )
blend_point_7/node = SubResource( 73 )
blend_point_7/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=51]

[sub_resource type="AnimationNodeStateMachineTransition" id=52]

[sub_resource type="AnimationNodeStateMachineTransition" id=53]

[sub_resource type="AnimationNodeStateMachineTransition" id=54]

[sub_resource type="AnimationNodeStateMachine" id=74]
states/Idle/node = SubResource( 17 )
states/Idle/position = Vector2( 126, 70.3594 )
states/Turn/node = SubResource( 50 )
states/Turn/position = Vector2( 226, 153.973 )
states/Walk/node = SubResource( 22 )
states/Walk/position = Vector2( 336, 69.5859 )
transitions = [ "Idle", "Walk", SubResource( 23 ), "Walk", "Idle", SubResource( 24 ), "Idle", "Turn", SubResource( 51 ), "Turn", "Idle", SubResource( 52 ), "Turn", "Walk", SubResource( 53 ), "Walk", "Turn", SubResource( 54 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=91]

[sub_resource type="Animation" id=92]
resource_name = "Disappear"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("QuestionMark:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "entered_door"
} ]
}

[sub_resource type="Animation" id=93]
resource_name = "IdleDown"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("QuestionMark:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=94]
resource_name = "IdleLeft"
tracks/0/type = "value"
tracks/0/path = NodePath("QuestionMark:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("QuestionMark:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=95]
resource_name = "IdleRight"
tracks/0/type = "value"
tracks/0/path = NodePath("QuestionMark:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("QuestionMark:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=96]
resource_name = "IdleUp"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("QuestionMark:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=97]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("QuestionMark:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=98]
resource_name = "TurnDown"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("QuestionMark:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 1 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finished_turning"
} ]
}

[sub_resource type="Animation" id=99]
resource_name = "TurnLeft"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("QuestionMark:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("QuestionMark:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finished_turning"
} ]
}

[sub_resource type="Animation" id=100]
resource_name = "TurnRight"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("QuestionMark:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("QuestionMark:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finished_turning"
} ]
}

[sub_resource type="Animation" id=101]
resource_name = "TurnUp"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("QuestionMark:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 4 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finished_turning"
} ]
}

[sub_resource type="Animation" id=102]
resource_name = "WalkDown"
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("QuestionMark:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("QuestionMark:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=103]
resource_name = "WalkLeft"
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("QuestionMark:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 7 ]
}

[sub_resource type="Animation" id=104]
resource_name = "WalkRight"
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("QuestionMark:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("QuestionMark:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=105]
resource_name = "WalkUp"
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("QuestionMark:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("QuestionMark:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=106]
extents = Vector2( 96, 10 )

[sub_resource type="RectangleShape2D" id=107]
extents = Vector2( 8, 8 )

[node name="NPC2" type="StaticBody2D"]
position = Vector2( -64, 40 )
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
offset = Vector2( 0, -4 )
flip_h = true
hframes = 3
vframes = 3
frame = 7
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 8 )
shape = SubResource( 55 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 74 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 91 )
parameters/Idle/blend_position = Vector2( 0.00141239, 0.995708 )
parameters/Turn/blend_position = Vector2( 0, 0 )
parameters/Walk/blend_position = Vector2( 0.00211859, 0.995708 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/Disappear = SubResource( 92 )
anims/IdleDown = SubResource( 93 )
anims/IdleLeft = SubResource( 94 )
anims/IdleRight = SubResource( 95 )
anims/IdleUp = SubResource( 96 )
anims/RESET = SubResource( 97 )
anims/TurnDown = SubResource( 98 )
anims/TurnLeft = SubResource( 99 )
anims/TurnRight = SubResource( 100 )
anims/TurnUp = SubResource( 101 )
anims/WalkDown = SubResource( 102 )
anims/WalkLeft = SubResource( 103 )
anims/WalkRight = SubResource( 104 )
anims/WalkUp = SubResource( 105 )

[node name="BlockingRayCast2D" type="RayCast2D" parent="."]
position = Vector2( 8, 8 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 7
__meta__ = {
"_edit_lock_": true
}

[node name="InteractionShape" type="Area2D" parent="."]
position = Vector2( 56, 8 )
scale = Vector2( 0.5, 0.25 )
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionShape"]
shape = SubResource( 106 )

[node name="QuestionMark" type="Sprite" parent="."]
position = Vector2( 8, -8 )
scale = Vector2( 0.018, 0.02 )
texture = ExtResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 8, 8 )
shape = SubResource( 107 )

[connection signal="body_entered" from="InteractionShape" to="." method="_on_NPC_body_entered"]
[connection signal="body_exited" from="InteractionShape" to="." method="_on_NPC_body_exited"]
